--- a/src/pages/NewPolicyPage/NewPolicyPage.css
+++ b/src/pages/NewPolicyPage/NewPolicyPage.css
@@ -15,3 +15,9 @@
     align-items: center;
     flex-direction: column;
 }
+
+.brand{
+    width: 355px;
+    height: auto;
+    margin: 0px 10px 0px 10px;
+}
