--- a/src/pages/Infobeer/Infobeer.css
+++ b/src/pages/Infobeer/Infobeer.css
@@ -12,7 +12,7 @@
     width: 244px;
     height: 392px;
     left: 18.06px;
-    top: 69.89px; /* 159 */
+    top: 89.89px; /* 159 */
     background-color: #D9D9D9;;
     box-shadow: 4px -2px 23px rgba(81, 44, 10, 0.4);
     backdrop-filter: blur(4px);
@@ -26,7 +26,7 @@
     width: 252.3px;
     height: 453.36px;
     left: 61.71px;
-    top: 37px;
+    top: 57px;
     background-color: rgba(255, 255, 255, 0.85);
     box-shadow: 4px -2px 23px rgba(81, 44, 10, 0.4);
     backdrop-filter: blur(4px);
@@ -40,7 +40,7 @@
     width: 244px;
     height: 392px;
     left: 112.86px;
-    top: 51.69px;
+    top: 71.69px;
     background-color:#F8F8F8;
     box-shadow: 4px -2px 23px rgba(81, 44, 10, 0.4);
     backdrop-filter: blur(4px);
@@ -61,12 +61,14 @@
     margin-left:75px;
     background-color: transparent;
     border: 0px;
+    margin-top: 40px;
 }
 .Vright{
     display:inline-block;
-    margin-left:165px;
+    margin-left:195px;
     background-color: transparent;
     border: 0px;
+    margin-top: 40px;
 }
 
 .left-idea{
