--- a/src/pages/Dasboard/Dasboard.css
+++ b/src/pages/Dasboard/Dasboard.css
@@ -14,6 +14,13 @@
   font-size: 24px;
   line-height: 35px;
   text-align: center;
-  margin-top: 7px;
+  margin-top: 440px;
   margin-bottom: 7px;
+  top: 220px; /* lvl-100*/
+}
+
+.contain44{
+  width: 375px;
+  display: flex;
+  height: 880px; /* lvl-100*/
 }
